  will always receive a 'struct timezone' whose tz_minuteswest and
  tz_dsttime fields are zero.

* The function pthread_clockjoin_np has been added, enabling join with a
  terminated thread with a specific clock.  It allows waiting against
  CLOCK_MONOTONIC and CLOCK_REALTIME.  This function is a GNU extension.

* New locale added: mnw_MM (Mon language spoken in Myanmar).

Deprecated and removed features, and other changes affecting compatibility:

* The totalorder and totalordermag functions, and the corresponding
  functions for other floating-point types, now take pointer arguments to
  avoid signaling NaNs possibly being converted to quiet NaNs in argument
  passing.  This is in accordance with the resolution of Clarification
  Request 25 to TS 18661-1, as applied for C2X.  Existing binaries that pass
  floating-point arguments directly will continue to work.

* The obsolete function stime is no longer available to newly linked
  binaries and it has been removed from <time.h> header.  This function
  has been deprecated in favor of clock_settime.

* The settimeofday function can still be used to set a system-wide time
  zone when the operating system supports it.  This is because the Linux
  kernel reused the API, on some architectures, to describe a system-wide
  time-zone-like offset between the software clock maintained by the kernel,
  and the "RTC" clock that keeps time when the system is shut down.

  However, to reduce the odds of this offset being set by accident,
  settimeofday can no longer be used to set the time and the offset
  simultaneously.  If both of its two arguments are non-null, the call
  will fail (setting errno to EINVAL).

  Callers attempting to set this offset should also be prepared for the call
  to fail and set errno to ENOSYS; this already happens on the Hurd and on
  some Linux architectures.  The Linux kernel maintainers are discussing a
  more principled replacement for the reused API.  After a replacement